# Infra

Mancala/: README.md  docker-compose.yml
Mancala/backend/: Dockerfile  README.md  requirements.txt
Mancala/backend/app/: main.py  metrics.py  models.py  motor_client.py  settings.py
Mancala/backend/tests/: test_health.py  test_move.py  test_validation.py
Mancala/deploy/local/: 01-configmap.yaml  02-motor.yaml  03-backend.yaml  04-frontend.yaml  docker-compose.yml
Mancala/docs/: 01-arquitectura.md  02-motor.md  03-paralelizacion.md  04-despliegue-local.md  05-despliegue-nube.md  06-cicd.md  07-analisis-comparativo.md  08-conclusiones.md  README.md
Mancala/frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json
Mancala/frontend/src/: App.tsx  index.css  types.ts
Mancala/frontend/src/components/: MancalaBoard.tsx
Mancala/frontend/src/services/: api.ts
Mancala/motor/: CMakeLists.txt  Dockerfile
Mancala/motor/bench/: benchmark_main.cpp
Mancala/motor/src/: alphabeta.cpp  alphabeta.h  board.cpp  board.h  heuristic.cpp  heuristic.h  main.cpp  minimax.cpp  minimax.h  parallel.cpp  parallel.h  server.cpp
Mancala/motor/tests/: test_alphabeta.cpp  test_board.cpp  test_capture.cpp  test_endgame.cpp  test_equivalence.cpp  test_extra_turn.cpp  test_minimax.cpp
